--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -1,14 +1,12 @@
-[workspace]
-resolver = "2"
-members = ["components-rust/*", "common-rust/*"]
+[package]
+name = "test"
+version = "0.1.0"
+edition = "2021"
 
-[profile.release]
-opt-level = "s"
-lto = true
-
-[workspace.dependencies]
-golem-rust = { version = "1.5.1", features = ["export_load_snapshot", "export_save_snapshot", "export_oplog_processor"] }
-reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "update-march-2025", features = ["json"] }
+[dependencies]
+golem-llm = { path = "../llm" }
+llm-bedrock = { path = "../llm-bedrock" }
+tokio = { version = "1.36.0", features = ["full"] }
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
