--- a/test/components-rust/test-llm/golem.yaml
+++ b/test/components-rust/test-llm/golem.yaml
@@ -31,6 +31,28 @@ components:
         clean:
           - src/bindings.rs
 
+      ollama-debug:
+        build:
+          - command: cargo component build --no-default-features --features ollama
+            sources:
+              - src
+              - wit-generated
+              - ../../common-rust
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_llm.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
+            sources:
+              - ../../target/wasm32-wasip1/debug/test_llm.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
+        sourceWit: wit
+        generatedWit: wit-generated
+        componentWasm: ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_ollama_debug.wasm
+        clean:
+          - src/bindings.rs
+
       anthropic-debug:
         build:
           - command: cargo component build --no-default-features --features anthropic
@@ -117,6 +139,28 @@ components:
         generatedWit: wit-generated
         componentWasm: ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
         linkedWasm: ../../golem-temp/components/test_openai_release.wasm
+        clean:
+          - src/bindings.rs
+
+      ollama-release:
+        build:
+          - command: cargo component build --release --no-default-features --features ollama
+            sources:
+              - src
+              - wit-generated
+              - ../../common-rust
+            targets:
+              - ../../target/wasm32-wasip1/release/test_llm.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
+            sources:
+              - ../../target/wasm32-wasip1/release/test_llm.wasm
+              - ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm
+            targets:
+              - ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
+        sourceWit: wit
+        generatedWit: wit-generated
+        componentWasm: ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_ollama_release.wasm
         clean:
           - src/bindings.rs
 
