--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["llm", "llm-anthropic", "llm-grok", "llm-openai", "llm-openrouter"]
+members = ["llm", "llm-anthropic", "llm-grok","llm-ollama", "llm-openai", "llm-openrouter"]
 
 [profile.release]
 debug = false
@@ -15,3 +15,4 @@ reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-apri
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
+base64 = "0.22.1"
