feat(image): add ImageProcessor with validation, resizing & format optimization

--- a/llm/Cargo.toml
+++ b/llm/Cargo.toml
@@ -20,7 +20,14 @@ reqwest = { workspace = true }
 thiserror = "2.0.12"
 wasi-logger = "0.1.2"
 wit-bindgen = { version = "0.40.0" }
+image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
+base64 = "0.21"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [features]
 default = ["durability"]
 durability = ["golem-rust/durability"]
+
+[dev-dependencies]
+tempfile = "3.8"
