--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["llm", "llm-anthropic", "llm-grok", "llm-openai", "llm-openrouter"]
+members = ["llm", "llm-anthropic", "llm-grok", "llm-openai", "llm-openrouter", "embed", "embed-openai", "embed-cohere", "embed-huggingface", "embed-voyageai"]
 
 [profile.release]
 debug = false
