build: update golem_llm dependency path
Update the path for the golem_llm dependency in Cargo.toml to point to the correct directory. This ensures the build system can locate the dependency properly.

--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["rlib"]
 
 [dependencies]
 golem-rust = { workspace = true }
-golem_llm = { path = ".." }
+golem_llm = { path = "../llm" }
 log = { workspace = true }
 mime = "0.3.17"
 nom = { version = "7.1", default-features = false }
