--- a/llm-ollama/Cargo.toml
+++ b/llm-ollama/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 homepage = "https://golem.cloud"
 repository = "https://github.com/golemcloud/golem-llm"
-description = "WebAssembly component for working with Ollama APIs, integrated into Golem Cloud local model support"
+description = "WebAssembly component for working with Ollama APIs, with special support for Golem Cloud"
 
 [lib]
 path = "src/lib.rs"
