--- a/llm-bedrock/Cargo.toml
+++ b/llm-bedrock/Cargo.toml
@@ -23,19 +23,19 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 
-# AWS SDK
-aws-config = { version = "1.1.7", default-features = false, features = ["behavior-version-latest"] }
-aws-sdk-bedrockruntime = { version = "1.16.0", default-features = false, features = ["rt-tokio"] }
-aws-smithy-http = { version = "0.60.0" }
-aws-smithy-runtime = { version = "1.1.7", features = ["client"] }
-aws-types = { version = "1.1.1", default-features = false } # For Region
+# AWS SDK with WASI support - minimal configuration
+aws-config = { version = "1.5.19", default-features = false, features = ["behavior-version-latest"] }
+aws-sdk-bedrockruntime = { version = "1.56.0", default-features = false }
+aws-smithy-wasm = { version = "0.1.4", default-features = false }
+aws-types = { version = "1.3.4", default-features = false }
+# Minimal tokio for WASI (only WASM-compatible features)
+tokio = { version = "1.40", default-features = false, features = ["macros", "rt", "time", "io-util"] }
+# HTTP client for image fetching (Bedrock requires image bytes, not URLs)
+reqwest = { workspace = true }
+# Base64 decoding for data URL images
+base64 = "0.22"
 
-# Async utilities
-futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
-async-trait = "0.1" # If needed for traits with async methods
 
-# For Bedrock JSON structures and byte manipulation
-bytes = "1.5"
 
 [package.metadata.component]
 package = "golem:llm-bedrock"
