--- a/test/components-rust/test-llm/golem.yaml
+++ b/test/components-rust/test-llm/golem.yaml
@@ -99,23 +99,23 @@ components:
 
       bedrock-debug:
         build:
-          - command: cargo component build --no-default-features --features bedrock # Assuming a 'bedrock' feature will be added to test_llm Cargo.toml
+          - command: cargo component build --no-default-features --features bedrock
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_llm_plugged_bedrock.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
               - ../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm
             targets:
-              - ../../target/wasm32-wasip1/debug/test_llm_plugged_bedrock.wasm
+              - ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_llm_plugged_bedrock.wasm
-        linkedWasm: ../../golem-temp/components/test_llm_bedrock_debug.wasm # Ensure unique name
+        componentWasm: ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_bedrock_debug.wasm
         clean:
           - src/bindings.rs
 
@@ -205,6 +205,28 @@ components:
         generatedWit: wit-generated
         componentWasm: ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
         linkedWasm: ../../golem-temp/components/test_openrouter_release.wasm
+        clean:
+          - src/bindings.rs
+
+      bedrock-release:
+        build:
+          - command: cargo component build --release --no-default-features --features bedrock
+            sources:
+              - src
+              - wit-generated
+              - ../../common-rust
+            targets:
+              - ../../target/wasm32-wasip1/release/test_llm.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
+            sources:
+              - ../../target/wasm32-wasip1/release/test_llm.wasm
+              - ../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm
+            targets:
+              - ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
+        sourceWit: wit
+        generatedWit: wit-generated
+        componentWasm: ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_bedrock_release.wasm
         clean:
           - src/bindings.rs
 
