--- a/golem-llm/Makefile.toml
+++ b/golem-llm/Makefile.toml
@@ -10,117 +10,117 @@ args = ["clean"]
 command = "cargo"
 args = ["test"]
 
-[tasks.build-llm-ollama]
+[tasks.build-ollama]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-ollama"]
 
 
-[tasks.build-llm-ollama-portable]
+[tasks.build-ollama-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-ollama", "--no-default-features"]
 
 
-[tasks.build-llm-anthropic]
+[tasks.build-anthropic]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-anthropic"]
 
-[tasks.build-llm-anthropic-portable]
+[tasks.build-anthropic-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-anthropic", "--no-default-features"]
 
-[tasks.build-llm-grok]
+[tasks.build-grok]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-grok"]
 
-[tasks.build-llm-grok-portable]
+[tasks.build-grok-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-grok", "--no-default-features"]
 
-[tasks.build-llm-openai]
+[tasks.build-openai]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openai"]
 
-[tasks.build-llm-openai-portable]
+[tasks.build-openai-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openai", "--no-default-features"]
 
-[tasks.build-llm-openrouter]
+[tasks.build-openrouter]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openrouter"]
 
-[tasks.build-llm-openrouter-portable]
+[tasks.build-openrouter-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openrouter", "--no-default-features"]
 
-[tasks.build-llm]
+[tasks.build]
 dependencies = [
-    "build-llm-anthropic",
-    "build-llm-grok",
-    "build-llm-openai",
-    "build-llm-openrouter",
-    "build-llm-ollama",
+    "build-anthropic",
+    "build-grok",
+    "build-openai",
+    "build-openrouter",
+    "build-ollama",
 ]
 
-[tasks.build-llm-portable]
+[tasks.build-portable]
 dependencies = [
-    "build-llm-anthropic-portable",
-    "build-llm-grok-portable",
-    "build-llm-openai-portable",
-    "build-llm-openrouter-portable",
-    "build-llm-ollama-portable",
+    "build-anthropic-portable",
+    "build-grok-portable",
+    "build-openai-portable",
+    "build-openrouter-portable",
+    "build-ollama-portable",
 ]
 
-[tasks.build-all-llm]
+[tasks.build-all]
 script_runner = "@duckscript"
 script = '''
-mkdir components/llm/debug
+mkdir components/debug
 
 cm_run_task clean
-cm_run_task build-llm
+cm_run_task build
 
-cp target/wasm32-wasip1/debug/golem_llm_anthropic.wasm components/llm/debug/golem_llm_anthropic.wasm
-cp target/wasm32-wasip1/debug/golem_llm_grok.wasm components/llm/debug/golem_llm_grok.wasm
-cp target/wasm32-wasip1/debug/golem_llm_openai.wasm components/llm/debug/golem_llm_openai.wasm
-cp target/wasm32-wasip1/debug/golem_llm_openrouter.wasm components/llm/debug/golem_llm_openrouter.wasm
-cp target/wasm32-wasip1/debug/golem_llm_ollama.wasm components/llm/debug/golem_llm_ollama.wasm
+cp target/wasm32-wasip1/debug/golem_llm_anthropic.wasm components/debug/golem_llm_anthropic.wasm
+cp target/wasm32-wasip1/debug/golem_llm_grok.wasm components/debug/golem_llm_grok.wasm
+cp target/wasm32-wasip1/debug/golem_llm_openai.wasm components/debug/golem_llm_openai.wasm
+cp target/wasm32-wasip1/debug/golem_llm_openrouter.wasm components/debug/golem_llm_openrouter.wasm
+cp target/wasm32-wasip1/debug/golem_llm_ollama.wasm components/debug/golem_llm_ollama.wasm
 
 cm_run_task clean
-cm_run_task build-llm-portable
+cm_run_task build-portable
 
-cp target/wasm32-wasip1/debug/golem_llm_anthropic.wasm components/llm/debug/golem_llm_anthropic-portable.wasm
-cp target/wasm32-wasip1/debug/golem_llm_grok.wasm components/llm/debug/golem_llm_grok-portable.wasm
-cp target/wasm32-wasip1/debug/golem_llm_openai.wasm components/llm/debug/golem_llm_openai-portable.wasm
-cp target/wasm32-wasip1/debug/golem_llm_openrouter.wasm components/llm/debug/golem_llm_openrouter-portable.wasm
-cp target/wasm32-wasip1/debug/golem_llm_ollama.wasm components/llm/debug/golem_llm_ollama-portable.wasm
+cp target/wasm32-wasip1/debug/golem_llm_anthropic.wasm components/debug/golem_llm_anthropic-portable.wasm
+cp target/wasm32-wasip1/debug/golem_llm_grok.wasm components/debug/golem_llm_grok-portable.wasm
+cp target/wasm32-wasip1/debug/golem_llm_openai.wasm components/debug/golem_llm_openai-portable.wasm
+cp target/wasm32-wasip1/debug/golem_llm_openrouter.wasm components/debug/golem_llm_openrouter-portable.wasm
+cp target/wasm32-wasip1/debug/golem_llm_ollama.wasm components/debug/golem_llm_ollama-portable.wasm
 '''
 
-[tasks.release-build-llm-ollama]
+[tasks.release-build-ollama]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-ollama", "--release"]
 
-[tasks.release-build-llm-ollama-portable]
+[tasks.release-build-ollama-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-ollama", "--release", "--no-default-features"]
 
 
-[tasks.release-build-llm-anthropic]
+[tasks.release-build-anthropic]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-anthropic", "--release"]
 
-[tasks.release-build-llm-anthropic-portable]
+[tasks.release-build-anthropic-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = [
@@ -131,32 +131,32 @@ args = [
     "--no-default-features",
 ]
 
-[tasks.release-build-llm-grok]
+[tasks.release-build-grok]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-grok", "--release"]
 
-[tasks.release-build-llm-grok-portable]
+[tasks.release-build-grok-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-grok", "--release", "--no-default-features"]
 
-[tasks.release-build-llm-openai]
+[tasks.release-build-openai]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openai", "--release"]
 
-[tasks.release-build-llm-openai-portable]
+[tasks.release-build-openai-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openai", "--release", "--no-default-features"]
 
-[tasks.release-build-llm-openrouter]
+[tasks.release-build-openrouter]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openrouter", "--release"]
 
-[tasks.release-build-llm-openrouter-portable]
+[tasks.release-build-openrouter-portable]
 install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = [
@@ -167,57 +167,57 @@ args = [
     "--no-default-features",
 ]
 
-[tasks.release-build-llm]
+[tasks.release-build]
 dependencies = [
-    "release-build-llm-anthropic",
-    "release-build-llm-grok",
-    "release-build-llm-openai",
-    "release-build-llm-openrouter",
-    "release-build-llm-ollama",
+    "release-build-anthropic",
+    "release-build-grok",
+    "release-build-openai",
+    "release-build-openrouter",
+    "release-build-ollama",
 ]
 
-[tasks.release-build-llm-portable]
+[tasks.release-build-portable]
 dependencies = [
-    "release-build-llm-anthropic-portable",
-    "release-build-llm-grok-portable",
-    "release-build-llm-openai-portable",
-    "release-build-llm-openrouter-portable",
-    "release-build-llm-ollama-portable",
+    "release-build-anthropic-portable",
+    "release-build-grok-portable",
+    "release-build-openai-portable",
+    "release-build-openrouter-portable",
+    "release-build-ollama-portable",
 ]
 
-[tasks.release-build-all-llm]
+[tasks.release-build-all]
 script_runner = "@duckscript"
 script = '''
-mkdir components/llm/release
+mkdir components/release
 
 cm_run_task set-version
 
 cm_run_task clean
-cm_run_task release-build-llm
+cm_run_task release-build
 
-cp target/wasm32-wasip1/release/golem_llm_anthropic.wasm components/llm/release/golem_llm_anthropic.wasm
-cp target/wasm32-wasip1/release/golem_llm_grok.wasm components/llm/release/golem_llm_grok.wasm
-cp target/wasm32-wasip1/release/golem_llm_openai.wasm components/llm/release/golem_llm_openai.wasm
-cp target/wasm32-wasip1/release/golem_llm_openrouter.wasm components/llm/release/golem_llm_openrouter.wasm
-cp target/wasm32-wasip1/release/golem_llm_ollama.wasm components/llm/release/golem_llm_ollama.wasm
+cp target/wasm32-wasip1/release/golem_llm_anthropic.wasm components/release/golem_llm_anthropic.wasm
+cp target/wasm32-wasip1/release/golem_llm_grok.wasm components/release/golem_llm_grok.wasm
+cp target/wasm32-wasip1/release/golem_llm_openai.wasm components/release/golem_llm_openai.wasm
+cp target/wasm32-wasip1/release/golem_llm_openrouter.wasm components/release/golem_llm_openrouter.wasm
+cp target/wasm32-wasip1/release/golem_llm_ollama.wasm components/release/golem_llm_ollama.wasm
 
 cm_run_task clean
-cm_run_task release-build-llm-portable
+cm_run_task release-build-portable
 
-cp target/wasm32-wasip1/release/golem_llm_anthropic.wasm components/llm/release/golem_llm_anthropic-portable.wasm
-cp target/wasm32-wasip1/release/golem_llm_grok.wasm components/llm/release/golem_llm_grok-portable.wasm
-cp target/wasm32-wasip1/release/golem_llm_openai.wasm components/llm/release/golem_llm_openai-portable.wasm
-cp target/wasm32-wasip1/release/golem_llm_openrouter.wasm components/llm/release/golem_llm_openrouter-portable.wasm
-cp target/wasm32-wasip1/release/golem_llm_ollama.wasm components/llm/release/golem_llm_ollama-portable.wasm
+cp target/wasm32-wasip1/release/golem_llm_anthropic.wasm components/release/golem_llm_anthropic-portable.wasm
+cp target/wasm32-wasip1/release/golem_llm_grok.wasm components/release/golem_llm_grok-portable.wasm
+cp target/wasm32-wasip1/release/golem_llm_openai.wasm components/release/golem_llm_openai-portable.wasm
+cp target/wasm32-wasip1/release/golem_llm_openrouter.wasm components/release/golem_llm_openrouter-portable.wasm
+cp target/wasm32-wasip1/release/golem_llm_ollama.wasm components/release/golem_llm_ollama-portable.wasm
 '''
 
-[tasks.wit-llm-update]
+[tasks.wit-update]
 install_crate = { crate_name = "wit-deps-cli" }
 command = "wit-deps"
 args = ["update"]
 
-[tasks.wit-llm]
-dependencies = ["wit-llm-update"]
+[tasks.wit]
+dependencies = ["wit-update"]
 
 #condition = { files_modified = { input = [
 #    "wit/golem-llm.wit",
@@ -232,42 +232,41 @@ dependencies = ["wit-llm-update"]
 
 script_runner = "@duckscript"
 script = """
-rm -r golem-llm/llm/wit/deps
-mkdir golem-llm/llm/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io golem-llm/llm/wit/deps
-rm -r golem-llm/llm-anthropic/wit/deps
-mkdir golem-llm/llm-anthropic/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm-anthropic/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io llm-anthropic/wit/deps
-rm -r golem-llm/llm-grok/wit/deps
-mkdir golem-llm/llm-grok/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm-grok/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io golem-llm/llm-grok/wit/deps
-rm -r golem-llm/llm-openai/wit/deps
-mkdir golem-llm/llm-openai/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm-openai/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io golem-llm/llm-openai/wit/deps
-rm -r golem-llm/llm-openrouter/wit/deps
-mkdir golem-llm/llm-openrouter/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm-openrouter/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io golem-llm/llm-openrouter/wit/deps
-rm -r golem-llm/llm-ollama/wit/deps
-mkdir golem-llm/llm-ollama/wit/deps/golem-llm
-cp golem-llm/wit/golem-llm.wit golem-llm/llm-ollama/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io golem-llm/llm-ollama/wit/deps
+rm -r llm/wit/deps
+mkdir llm/wit/deps/golem-llm
+cp wit/golem-llm.wit llm/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm/wit/deps
+rm -r llm-anthropic/wit/deps
+mkdir llm-anthropic/wit/deps/golem-llm
+cp wit/golem-llm.wit llm-anthropic/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm-anthropic/wit/deps
+rm -r llm-grok/wit/deps
+mkdir llm-grok/wit/deps/golem-llm
+cp wit/golem-llm.wit llm-grok/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm-grok/wit/deps
+rm -r llm-openai/wit/deps
+mkdir llm-openai/wit/deps/golem-llm
+cp wit/golem-llm.wit llm-openai/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm-openai/wit/deps
+rm -r llm-openrouter/wit/deps
+mkdir llm-openrouter/wit/deps/golem-llm
+cp wit/golem-llm.wit llm-openrouter/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm-openrouter/wit/deps
+rm -r llm-ollama/wit/deps
+mkdir llm-ollama/wit/deps/golem-llm
+cp wit/golem-llm.wit llm-ollama/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io llm-ollama/wit/deps
 
 
-rm -r golem-llm/test/wit
-mkdir golem-llm/test/wit/deps/golem-llm
-mkdir golem-llm/test/wit/deps/io
-cp golem-llm/wit/golem-llm.wit golem-llm/test/wit/deps/golem-llm/golem-llm.wit
-cp golem-llm/wit/deps/wasi:io/error.wit golem-llm/test/wit/deps/io/error.wit
-cp golem-llm/wit/deps/wasi:io/poll.wit golem-llm/test/wit/deps/io/poll.wit
-cp golem-llm/wit/deps/wasi:io/streams.wit golem-llm/test/wit/deps/io/streams.wit
-cp golem-llm/wit/deps/wasi:io/world.wit golem-llm/test/wit/deps/io/world.wit
+rm -r test/wit
+mkdir test/wit/deps/golem-llm
+mkdir test/wit/deps/io
+cp wit/golem-llm.wit test/wit/deps/golem-llm/golem-llm.wit
+cp wit/deps/wasi:io/error.wit test/wit/deps/io/error.wit
+cp wit/deps/wasi:io/poll.wit test/wit/deps/io/poll.wit
+cp wit/deps/wasi:io/streams.wit test/wit/deps/io/streams.wit
+cp wit/deps/wasi:io/world.wit test/wit/deps/io/world.wit
 """
-
 
 [tasks.check]
 description = "Runs rustfmt and clippy checks without applying any fix"
@@ -287,7 +286,7 @@ args = ["clippy", "--all-targets", "--", "--no-deps", "-Dwarnings"]
 
 [tasks.fix]
 description = "Runs rustfmt and clippy checks and applies fixes"
-dependencies = ["wit-llm", "wit-embed", "fix-clippy", "fix-rustfmt"]
+dependencies = ["wit", "fix-clippy", "fix-rustfmt"]
 
 [tasks.fix-rustfmt]
 description = "Runs rustfmt checks and applies fixes"
@@ -309,14 +308,14 @@ args = [
     "-Dwarnings",
 ]
 
-[tasks.build-llm-test-components]
-dependencies = ["build-llm"]
+[tasks.build-test-components]
+dependencies = ["build"]
 description = "Builds all test components with golem-cli"
 install_crate = "cargo-binstall"
 script = '''
 cargo-binstall golem-cli@1.2.2-dev.11 --locked --force --no-confirm
 cargo-binstall wac-cli --locked --force --no-confirm
-cd golem-llm/test
+cd test
 golem-cli --version
 golem-cli app clean
 golem-cli app build -b anthropic-debug
@@ -329,6 +328,7 @@ golem-cli app build -b openrouter-debug
 golem-cli app clean
 golem-cli app build -b ollama-debug
 '''
+
 
 [tasks.set-version]
 description = "Sets the version in all Cargo.toml files to the value of the VERSION environment variable"
@@ -356,26 +356,3 @@ foreach ($file in $cargoFiles)
     Set-Content $file.PSPath
 }
 '''
-
-
-
-[tasks.build-all]
-script_runner = "@duckscript"
-script = """
-cm_run_task build-all-llm
-"""
-
-
-[tasks.release-build-all]
-script_runner = "@duckscript"
-script = """
-cm_run_task release-build-all-llm
-"""
-
-
-
-[tasks.build-test-components]
-script_runner = "@duckscript"
-script = """
-cm_run_task build-llm-test-components
-"""
