--- a/golem-embed/embed-openai/Cargo.toml
+++ b/golem-embed/embed-openai/Cargo.toml
@@ -26,6 +26,7 @@ serde = {workspace = true}
 base64 = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
+bytemuck = "1.23.0"
 
 
 [package.metadata.component]
